# hermes-home

./: .gitignore  .restart_failure_counts  .restart_last_processed.json  20260512_215238_b99199  Makefile  README.md  cli.py  config.yaml  config.yaml.bak.20260608_101354  config.yaml.pre-skillclaw  config.yaml.skillclaw-bak-20260604_235319  config.yaml.skillclaw-bak-20260605_005816  env_fix.sh  evolve_history.jsonl  evolver_analysis.py  evolver_to_simplemem.py  hermes-skillclaw-architecture.md  hermes_constants.py  hermes_to_evolver_bridge.py  honcho-config.toml  honcho.json  kanban.db  letta_server.py  mempalace-installation-guide.md  models.json  openapi_letta.json  s1_cleanup.py  self-evolution-2026-05-25.md  self-evolution-2026-05-26.md  self-evolution-2026-06-01.md  self-evolution-2026-06-03-complete-architecture-deep-dive.md  sessions_to_bucket.py  skill_quality_review.py  start_all.sh  task-board.md  utils.py  等保2.0标准知识提取报告.md
ai-capability-shelf/: pyproject.toml
ai-capability-shelf/ai_capability_shelf/: __init__.py  cli.py  composition.py  exceptions.py  governance.py  lifecycle.py  models.py  persistence.py  registry.py  runtime.py  standardization.py
ai-capability-shelf/ai_capability_shelf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-capability-shelf/tests/: conftest.py  test_clean.py  test_evaluation_engine.py  test_lifecycle_crash_recovery.py  test_lottery_aggregator.py  test_lottery_config.py  test_lottery_engine.py  test_lottery_exceptions.py  test_lottery_models.py  test_lottery_providers.py  test_persistence.py  test_reliability_engine.py
professor-synapse/: pyproject.toml
professor-synapse/professor_synapse/: __init__.py  (+6 more)
skills_quality/: SPEC.md  SPEC_MCP_INTEGRATION.md  __init__.py  core.py  final_audit.py  pyproject.toml  run_audit.py  run_quality_check.py  run_quality_full.py  skills_quality_mcp.py
(+1488 files in other folders)
