[project]
name = "professor-synapse"
version = "0.1.0"
description = "Professor Synapse internalized — persistent agent orchestration with crash recovery"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["professor_synapse*"]

[project.scripts]
prof-synapse = "professor_synapse.cli:main"
