[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skills_quality"
version = "0.1.0"
description = "Hermes Skills Quality Framework — validates and scores Hermes skills against PM-Skills-inspired standards"
readme = "SPEC.md"
requires-python = ">=3.11"
dependencies = ["PyYAML"]

[tool.setuptools.packages.find]
where = ["."]
include = ["skills_quality*"]
